# Fax

./: .dockerignore  .editorconfig  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  BUGFIXES.md  BUGFIXES_ROUND2.md  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_SUMMARY.md  Dockerfile  FGC.md  FGC_SUMMARY.md  Fax.toml  GC_IMPROVEMENTS.md  GEMINI.md  LICENSE  LICENSE-MIT  MODULE_STRUCTURE.md  Makefile  NAMESPACE_REFACTOR.md  PROTOBUF.md  PROTOBUF_SUMMARY.md  QC-002-FIX-REPORT.md  QC_ANALYSIS_2026-02-22.md  QC_AUDIT_REPORT.md  QC_QUICK_WINS.md  QC_TECHNICAL_DEBT.md  QWEN.md  README.md  REFACTORING_SUMMARY.md  RELEASE.md  (+42 more)
faxc/: .gitignore  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  Fax.lean  README.md  SECURITY.md  StdLib.lean  build.rs  build.zig  ci_local  ci_local.ll  cliff.toml  clippy.toml  compiler-config.json  coverage-report.sh  deny.toml  example  example.ll  example_complex  fax  package-lock.json  package.json  rustfmt.toml  tsconfig.json
faxc/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
faxc/.github/workflows/: ci.yml  release.yml
faxc/.zig-cache/o/1a271f256ae3e2dd0de3e09017b7ebbd/: cimport.h.d
faxc/.zig-cache/o/329208be3490a4f249b523a0da5660e2/: parser
faxc/.zig-cache/o/606641cd83bdbd61edc913328ec7d1d5/: cimport.zig
faxc/Compiler/: AST.lean  Codegen.lean  Driver.lean  Lexer.lean  Parser.lean  Proto.lean  Runtime.lean  Semantic.lean  Validation.lean
faxc/Compiler/AST/: Decls.lean  Exprs.lean  Patterns.lean  Stmts.lean  Types.lean
faxc/Compiler/AST/Types/: Basic.lean  Literal.lean  Operators.lean  Utils.lean
faxc/Compiler/Codegen/: Expr.lean  IR.lean  Proto.lean  Stmt.lean  Types.lean
faxc/Compiler/Codegen/Proto/: Converters.lean
faxc/Compiler/Driver/: IO.lean  Proto.lean  Simple.lean
faxc/Compiler/Lexer/: Helpers.lean  Proto.lean  State.lean  Tokens.lean
faxc/Compiler/Lexer/Tokens/: Keywords.lean  Operators.lean
faxc/Compiler/Parser/: Decls.lean  Exprs.lean  Patterns.lean  Proto.lean  Stmts.lean  Types.lean
faxc/Compiler/Proto/: Binary.lean  Cache.lean  Codec.lean  Converters.lean  Diagnostics.lean  Discovery.lean  Grpc.lean  GrpcCodegen.lean  Messages.lean  Semantic.lean  Server.lean  Services.lean  Test.lean  Wire.lean  ffi.cpp  ffi.h
faxc/Compiler/Proto/Codec/: AST.lean  Token.lean  Types.lean
faxc/Compiler/Proto/Converters/: Decl.lean  Expr.lean  Pattern.lean  Token.lean  Types.lean
faxc/Compiler/Runtime/: Services.lean
faxc/Compiler/Runtime/GC/: Barrier.lean  Controller.lean  Full.lean  Generational.lean  Heap.lean  Mark.lean  Metrics.lean  Pinning.lean  ReferenceProcessor.lean  Relocate.lean  TLAB.lean  WriteBarrier.lean  ZPointer.lean
faxc/Compiler/Runtime/Memory/: ProtobufGC.lean
faxc/Compiler/Semantic/: Checker.lean  Errors.lean  Inference.lean  Proto.lean  Scope.lean  Types.lean
faxc/Compiler/Validation/: Core.lean  Identifiers.lean  Limits.lean  Source.lean  Types.lean
faxc/crates/faxc-drv/: Cargo.toml
faxc/crates/faxc-drv/src/: lib.rs  main.rs
faxc/crates/faxc-drv/tests/: edge_cases.rs  integration_test.rs  (+1 more)
faxc/crates/faxc-gen/: Cargo.toml
faxc/crates/faxc-lex/: Cargo.toml
faxc/crates/faxc-lir/: Cargo.toml
faxc/crates/faxc-mir/: Cargo.toml
faxc/crates/faxc-par/: Cargo.toml
faxc/crates/faxc-runtime/: Cargo.toml
faxc/crates/faxc-sem/: Cargo.toml
faxc/crates/faxc-util/: Cargo.toml
faxc/crates/fgc/: API.md  BUGS_FIXED.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  FGC_ANALYSIS_REPORT.md  README.md  TROUBLESHOOTING.md  UNWRAP_REMOVAL_REPORT.md
faxc/dist-newstyle/cache/: compiler  config
faxc/docs/: error-handling.md
faxc/docs/arch/: ARCHITECT.md  overview.md  pipeline.md  technology.md
faxc/docs/rfc/: README.md
faxc/docs/spec/: grammar.md
faxc/examples/: 01_hello.fax  02_variables.fax  03_functions.fax  04_control_flow.fax  05_structs.fax  06_enums.fax  07_arrays.fax  08_tuples.fax  09_lambda.fax  10_generics.fax  11_advanced_math.fax  12_pattern_matching.fax  13_traits.fax  14_recursion.fax  15_error_handling.fax  16_closures.fax  17_concurrency.fax  18_data_structures.fax  19_memory.fax  README.md  test_logic.fax
faxc/scripts/: build.sh  check.sh  test.sh  verify-msrv.sh
faxc/src/common/: types.ts
faxc/src/hub/: pipeline.ts
faxc/src/runtime/: fgc.zig  fgc_test.rs  gc.rs  gc.zig
faxc/tests/fax/: array_logic_test.fax  array_test_complex.fax  bug_test.fax  ci_local.fax  class_test.fax  comparison_test.fax  complex_struct_test.fax  const_test.fax  counter.fax  error_handling_test.fax  example.fax  example_complex.fax  extern_test.fax  for_scope_leak.fax  for_test.fax  func_test.fax  gc_auto_test.fax  gc_large_bug.fax  gc_large_bug_v2.fax  gc_recursion_leak.fax  gc_struct_leak.fax  logic_precedence_test.fax  logic_simple.fax  logic_test.fax  loop_test.fax  match_test.fax  oop_test.fax  precedence_test.fax  recursion_test.fax  rust_error.fax  scope_corruption_demo.fax  scope_leak_test.fax  shadow_bug.fax  shadow_complex.fax  shadow_corrupt_test.fax  short_circuit_test.fax  spec_test.fax  string_bug_test.fax  string_test.fax  struct_bug.fax  (+3 more)
faxc/tests/ir/: array_logic_test.ll  array_test_complex.ll  bug_test.ll  class_test.ll  comparison_test.ll  complex_struct_test.ll  const_test.ll  error_handling_test.ll  extern_test.ll  for_scope_leak.ll  for_test.ll  gc_recursion_leak.ll  gc_struct_leak.ll  logic_precedence_test.ll  logic_simple.ll  match_test.ll  oop_test.ll  output.ll  output_test.ll  precedence_test.ll  recursion_test.ll  scope_corruption_demo.ll  scope_leak_test.ll  shadow_bug.ll  shadow_complex.ll  shadow_corrupt_test.ll  short_circuit_test.ll  string_bug_test.ll  string_test.ll  struct_bug.ll  unary_test.ll
faxt/: .editorconfig  Cargo.toml  README.md  TEST_PLAN.md  inspect.py  main.py  package.json
faxt/core/: config.py  deps.py  toolchain.py  ui.py
faxt/core/commands/: dev.py  maintenance.py  project.py
faxt/src/: config.rs  error.rs  main.rs
faxt/src/commands/: build.rs  common.rs  convert.rs  init.rs  mod.rs  traits.rs
(+547 files in other folders)
