[workspace]
members = [
    "crates/*",
    # "tools/*",  # TODO: Add tools when implemented
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fax Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fax-lang/faxc"
rust-version = "1.75"

[workspace.dependencies]
# Core utilities
faxc-util = { path = "crates/faxc-util" }

# Compiler phases
faxc-lex = { path = "crates/faxc-lex" }
faxc-par = { path = "crates/faxc-par" }
faxc-sem = { path = "crates/faxc-sem" }
fgc = { path = "crates/fgc" }
faxc-mir = { path = "crates/faxc-mir" }
faxc-lir = { path = "crates/faxc-lir" }
faxc-gen = { path = "crates/faxc-gen" }
faxc-drv = { path = "crates/faxc-drv" }

# External dependencies
inkwell = { version = "0.8.0", features = ["llvm20-1", "target-all"] }
thiserror = "2.0"
anyhow = "1.0"
indexmap = "2.1"
rustc-hash = "1.1"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2