[package]
name = "faxt"
version = "0.0.3"
edition = "2021"
rust-version = "1.75"
authors = ["Fax Team"]
description = "A CLI tool for fax operations"
license = "MIT"
repository = "https://github.com/Fax/faxt"
keywords = ["cli", "fax", "tool"]
categories = ["command-line-utilities"]

[dependencies]
# CLI argument parsing with derive macros
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (optional, for future async operations)
tokio = { version = "1.35", features = ["full"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (for config files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System utilities
dirs = "5.0"
num_cpus = "1.16"

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"

# For mocking in tests
mockall = "0.12"

[features]
default = []
async = ["tokio"]

[[bin]]
name = "faxt"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true
