[package]
name = "faxc-lex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
faxc-util.workspace = true

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "lexer_bench"
harness = false