[package]
name = "faxc-par"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
faxc-util.workspace = true
faxc-lex.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_bench"
harness = false