[package]
name = "fgc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
faxc-util.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Concurrency
parking_lot.workspace = true
crossbeam.workspace = true

# NUMA support (optional)
num_cpus = "1.16"

# Logging
log = "0.4"

# Memory mapping (cross-platform)
memmap2 = "0.9"

# System page size detection
page_size = "0.6"

# Platform-specific dependencies for multi-mapping
[target.'cfg(unix)'.dependencies]
libc = "0.2"
libunwind = { version = "1.3", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Memory_NonVolatile",
] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "gc_perf"
harness = false